--- a/src/styles/ui/SettingsWindow.scss
+++ b/src/styles/ui/SettingsWindow.scss
@@ -1,1 +1,17 @@
 @import 'theme';
+
+.settings-card-display {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  font-size: 0.8em;
+  margin-top: 2em;
+  margin-bottom: 1em;
+}
+
+.settings-button-container {
+  margin-top: 3em;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
