--- a/src/styles/ui/events/FridayThe13thAnimation.scss
+++ b/src/styles/ui/events/FridayThe13thAnimation.scss
@@ -13,6 +13,7 @@
     height: 7.5em;
     margin-top: 0.3em;
     background: $terracotta;
+    z-index: 5;
   }
 
   & .roof {
@@ -69,34 +70,58 @@
 
   & .killer {
     position: absolute;
+    left: 2em;
+    bottom: 3em;
+    z-index: 1;
+
 
     & .killer-mask {
-
-      fill: $green;
-      width: 140%;
-      height: auto;
-      left: 3em;
-      bottom: 5em;
+      fill: $terracotta;
+      height: 2em;
+      width: auto;
       animation: freddy-peeking 2.5s forwards;
       animation-delay: 1s;
     }
 
-    & .killer-body {
+
+    & .cleaver {
       position: absolute;
-      border: 0.19em solid $green;
-      border-radius: 1em 1em 0 0;
-      height: 1.5em;
-      width: 2.5em;
-      bottom: 0.2em;
-      animation: move-body 2.5s forwards;
-      animation-delay: 1s;
+      animation: move-cleaver 2.5s forwards;
+      animation-delay: 1.5s;
+      left: 0.2em;
+      z-index: 1;
+
+      & .cleaver-stick {
+        position: absolute;
+        left: 1.2em;
+        width: 1em;
+        height: 0.25em;
+        background: $terracotta;
+      }
+
+      & .cleaver-blade {
+        position: absolute;
+        width: 1.3em;
+        height: 0.9em;
+        background: $terracotta;
+        border-radius: 0 0 0 0.2em;
+      }
+
+      & .cleaver-hole {
+        position: absolute;
+        width: 0.25em;
+        height: 0.25em;
+        top: 0.1em;
+        left: 0.1em;
+        border-radius: 50%;
+        background: $black;
+      }
     }
 
-    & .cleaver {}
+
 
 
   }
-
 
 
 }
@@ -105,19 +130,19 @@
   100% {
     //left: -1.5em;
     //bottom: 2.5em;
-    transform:  translate(-1.75em, -1.8em) rotate(-27deg);
+    transform: translateX(-1.75em) rotate(-27deg);
   }
 }
 
-@keyframes move-body {
+@keyframes move-cleaver {
   100% {
-    transform: rotate(-27deg) translate(-0.7em, -0.7em);
+    transform: rotate(27deg) translate(-1.9em, 0.7em);
   }
 }
 
 @keyframes tv-flickering {
   10% {
-    background:  lighten($black, 30%);
+    background: lighten($black, 30%);
   }
   15% {
     background: $black;
@@ -137,7 +162,8 @@
   80% {
     background: lighten($black, 40%);
   }
-  100% {background: $black;
+  100% {
+    background: $black;
   }
 
 }
