AppContainer: add shadow to settings button

--- a/src/styles/ui/AppContainer.scss
+++ b/src/styles/ui/AppContainer.scss
@@ -47,4 +47,5 @@
   height: $fontSizeDefault * 1.25;
   width: $fontSizeDefault * 1.25;
   margin-bottom: 0.06em;
+  filter: drop-shadow($dropShadow);
 }
