--- a/src/styles/ui/events/MexicanStandoffAnimation.scss
+++ b/src/styles/ui/events/MexicanStandoffAnimation.scss
@@ -40,17 +40,14 @@
 
     $animationDelay: 0.1s;
 
-    @for $i from 1 through 3 {
-      &:nth-child(#{$i}) {
-        animation-delay: $animationDelay * $i + 1.85s;
-      }
-    }
     &:nth-child(2) {
       transform: translateX(15em) translateY(-2.2em);
+      animation-delay: 2.3s;
     }
 
     &:nth-child(3) {
       transform: translateX(13em) translateY(0.3em);
+      animation-delay: 2.55s;
     }
   }
 
@@ -116,17 +113,7 @@
     transform: rotate(0deg);
   }
   39% {
-    left: -21em;
-    top: -3.2em;
-    transform: rotate(-10deg);
-  }
-  40%{
-    left: -20em;
-    top: -3em;
-    transform: rotate(0deg);
-  }
-  41% {
-    left: -21em;
+    left: -22em;
     top: -3.2em;
     transform: rotate(-10deg);
   }
@@ -135,22 +122,32 @@
     top: -3em;
     transform: rotate(0deg);
   }
-  43% {
-    left: -21em;
-    top: -3.2em;
-    transform: rotate(-10deg);
-  }
-  44%{
+  48% {
     left: -20em;
     top: -3em;
     transform: rotate(0deg);
   }
-  45% {
+  49% {
+    left: -21.3em;
+    top: -3.4em;
+    transform: rotate(-10deg);
+  }
+  52%{
+    left: -20em;
+    top: -3em;
+    transform: rotate(1deg);
+  }
+  53%{
+    left: -20em;
+    top: -3em;
+    transform: rotate(0deg);
+  }
+  54% {
     left: -21em;
     top: -3.2em;
     transform: rotate(-10deg);
   }
-  46%{
+  57%{
     left: -20em;
     top: -3em;
     transform: rotate(0deg);
