--- a/src/styles/ui/events/DoomsdayAnimation.scss
+++ b/src/styles/ui/events/DoomsdayAnimation.scss
@@ -158,7 +158,7 @@ $cloudAnimation: 3s forwards 1.25s;
     width: 200%;
     height: 400%;
     background-color: white;
-    opacity: 100%;
+    opacity: 1;
   }
   80%, 100% {
     width: 200%;
