Chat: highlight the current player's name.

--- a/src/styles/ui/Chat.scss
+++ b/src/styles/ui/Chat.scss
@@ -97,3 +97,8 @@ $chatItemSize: $fontSizeChat;
   line-height: $chatItemSize;
   word-break: break-all;
 }
+
+.chat-username-highlight {
+  color: $terracotta;
+  font-weight: 500;
+}
