ALL CSS: rename $terracotta to $accent for better theming

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -1,5 +1,9 @@
 /* Theme Colors */
-$terracotta: #E0745C;
+:root {
+  --terracotta: #E0745C;
+}
+
+$accent: var(--terracotta);
 $blueBlack: #333840;
 $blueGray: #484D59;
 $blueMediumGray: #5B6171;
