--- a/src/styles/ui/AppContainer.scss
+++ b/src/styles/ui/AppContainer.scss
@@ -43,7 +43,7 @@
 }
 
 .settings-button {
-  fill: $terracotta;
+  fill: $accent;
   height: $fontSizeDefault * 1.25;
   width: $fontSizeDefault * 1.25;
   margin-bottom: 0.06em;
