--- a/src/styles/ui/ToolWindow.scss
+++ b/src/styles/ui/ToolWindow.scss
@@ -12,7 +12,7 @@
 
 .toolwindow-header {
   font-size: $fontSizeSmallHeader;
-  background-color: $terracotta;
+  background-color: $accent;
   color: $blueGray;
   height: 2em;
   margin: 0;
