--- a/src/styles/ui/Window.scss
+++ b/src/styles/ui/Window.scss
@@ -10,7 +10,7 @@
 }
 
 .window-header {
-  background-color: $terracotta;
+  background-color: $accent;
   font-size: $fontSizeHeader;
   color: $blueGray;
   height: 1.8em;
