--- a/src/styles/ui/events/FinishLineAnimation.scss
+++ b/src/styles/ui/events/FinishLineAnimation.scss
@@ -10,11 +10,11 @@
     right: 5em;
     width: 1.5em;
     height: 12em;
-    border: 0.1em solid $terracotta;
+    border: 0.1em solid $accent;
     background-size: 1em 1em;
     background-position: 0 0, 0.5em 0.5em;
-    background-image: linear-gradient(45deg, $terracotta 25%, transparent 25%, transparent 75%, $terracotta 75%, $terracotta),
-    linear-gradient(45deg, $terracotta 25%, transparent 25%, transparent 75%, $terracotta 75%, $terracotta);
+    background-image: linear-gradient(45deg, $accent 25%, transparent 25%, transparent 75%, $accent 75%, $accent),
+    linear-gradient(45deg, $accent 25%, transparent 25%, transparent 75%, $accent 75%, $accent);
   }
 
   & .fl-runners-container {
@@ -31,7 +31,7 @@
     width: 2em;
     height: 2em;
     border-radius: 50%;
-    background-color: $terracotta;
+    background-color: $accent;
     overflow: visible;
     animation: finishline-run-1 3s linear forwards,
     finishline-run-end 3s ease-out forwards;
@@ -58,7 +58,7 @@
       width: 1em;
       height: 1em;
       border-radius: 50%;
-      background-color: $terracotta;
+      background-color: $accent;
       animation-name: finishline-move-feet, finishline-move-feet;
       animation-duration: 0.5s, 1s;
       animation-iteration-count: 6, 4;
@@ -89,7 +89,7 @@
     width: 5em;
     height: 5em;
     margin-bottom: 5em;
-    fill: $terracotta;
+    fill: $accent;
     opacity: 0;
     transform: scale(-1, 1);
     transform-origin: 100% 100%;
