--- a/src/styles/ui/events/MexicanStandoffAnimation.scss
+++ b/src/styles/ui/events/MexicanStandoffAnimation.scss
@@ -13,7 +13,7 @@
   & .revolver {
     z-index: 1;
     position: absolute;
-    fill: $terracotta;
+    fill: $accent;
     height: 10em;
     width: 15em;
     transform: rotate(90deg);
