--- a/src/styles/ui/events/VandalismAnimation.scss
+++ b/src/styles/ui/events/VandalismAnimation.scss
@@ -185,7 +185,7 @@
 
 .vandalism-frantic-logo {
   position: relative;
-  fill: $terracotta;
+  fill: $accent;
   height: 10em;
   width: 20em;
   transform: rotate(-2deg);
