--- a/src/styles/ui/end/EndWindow.scss
+++ b/src/styles/ui/end/EndWindow.scss
@@ -13,7 +13,7 @@
 .end-actions-text {
   font-size: 1.5em;
   font-weight: 500;
-  color: $terracotta;
+  color: $accent;
   text-transform: lowercase;
   margin: 0.4em 0.5em 0 0;
 }
