--- a/src/styles/ui/end/Scoreboard.scss
+++ b/src/styles/ui/end/Scoreboard.scss
@@ -14,7 +14,7 @@
   border-radius: 0.3em;
   box-sizing: border-box;
   overflow: hidden;
-  color: $terracotta;
+  color: $accent;
   font-size: 1.5em;
   font-weight: 500;
 }
