--- a/src/styles/ui/events/FridayThe13thAnimation.scss
+++ b/src/styles/ui/events/FridayThe13thAnimation.scss
@@ -12,12 +12,12 @@
     width: 13em;
     height: 7.5em;
     margin-top: 0.3em;
-    background: $terracotta;
+    background: $accent;
     z-index: 5;
   }
 
   & .roof {
-    border-bottom: 3em solid $terracotta;
+    border-bottom: 3em solid $accent;
     border-left: 2.5em solid transparent;
     border-right: 2.5em solid transparent;
     height: 0;
@@ -27,7 +27,7 @@
   & .chimney {
     width: 1.5em;
     height: 1.6em;
-    background: $terracotta;
+    background: $accent;
     position: absolute;
     right: 4.5em;
     top: -1.8em;
@@ -47,10 +47,10 @@
       width: 100%;
       height: 100%;
       background: linear-gradient(to bottom,
-              transparent 45%, $terracotta 45%,
-              $terracotta 55%, transparent 55%),
-      linear-gradient(to right, transparent 45%, $terracotta 45%,
-                      $terracotta 55%, transparent 55%);
+              transparent 45%, $accent 45%,
+              $accent 55%, transparent 55%),
+      linear-gradient(to right, transparent 45%, $accent 45%,
+                      $accent 55%, transparent 55%);
     }
 
     &:nth-child(1) {
@@ -76,7 +76,7 @@
 
 
     & .killer-mask {
-      fill: $terracotta;
+      fill: $accent;
       height: 2em;
       width: auto;
       animation: freddy-peeking 2.5s forwards;
@@ -96,14 +96,14 @@
         left: 1.2em;
         width: 1em;
         height: 0.25em;
-        background: $terracotta;
+        background: $accent;
       }
 
       & .cleaver-blade {
         position: absolute;
         width: 1.3em;
         height: 0.9em;
-        background: $terracotta;
+        background: $accent;
         border-radius: 0 0 0 0.2em;
       }
 
