--- a/src/styles/ui/help/CardHelp.scss
+++ b/src/styles/ui/help/CardHelp.scss
@@ -18,7 +18,7 @@
 
 .help-container strong {
   font-weight: 500;
-  color: $terracotta;
+  color: $accent;
 }
 
 .card-shadow-container {
@@ -41,7 +41,7 @@
   //padding: 0.3em 1em;
   margin: 0 0 0.2em;
   width: 100%;
-  color: $terracotta;
+  color: $accent;
   border-radius: 0.3em;
   box-sizing: border-box;
   text-transform: lowercase;
@@ -50,5 +50,5 @@
 .card-event-icon {
   width: 3em;
   height: 3em;
-  fill: $terracotta;
+  fill: $accent;
 }
