--- a/src/styles/views/EndView.scss
+++ b/src/styles/views/EndView.scss
@@ -15,7 +15,7 @@
       margin: 0 0 0.5em;
       font-size: 1.5em;
       font-weight: 500;
-      color: $terracotta;
+      color: $accent;
       text-transform: lowercase;
       text-shadow: $dropShadow;
     }
@@ -50,7 +50,7 @@
     margin: 0 1em 0 0;
     font-size: 1.5em;
     font-weight: 500;
-    color: $terracotta;
+    color: $accent;
     text-transform: lowercase;
     text-shadow: $dropShadow;
   }
