--- a/src/styles/ui/events/TornadoAnimation.scss
+++ b/src/styles/ui/events/TornadoAnimation.scss
@@ -14,15 +14,7 @@
     height: 0;
     opacity: 0;
     border-radius: 1em;
-    background: linear-gradient(
-                    90deg,
-                    $accent,
-                    $accent,
-                    //lighten($accent, 5),
-                    $accent,
-                    $accent
-    );
-    background-size: 400%;
+    background-color: $accent;
     animation-name: tornado-whirl, tornado-whirl-fadein;
     animation-duration: 2.5s, 0.5s;
     animation-iteration-count: infinite, 1;
@@ -31,10 +23,30 @@
     animation-fill-mode: forwards;
     $animationDelay: 0.45s;
     $fadeDelay: 0.25s;
+    overflow: hidden;
+
+    &::before {
+      display: block;
+      content: '';
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(
+                      90deg,
+                      transparent 25%,
+                      rgba(white, 0.15),
+                      transparent 75%
+      );
+      background-size: 400% 100%;
+      animation: tornado-whirl-background 2.5s linear infinite;
+    }
 
     @for $i from 1 through 5 {
       &:nth-child(#{$i}) {
         animation-delay: -($animationDelay * $i), ($fadeDelay * 5) - ($fadeDelay * $i);
+
+        &::before {
+          animation-delay: -($animationDelay * $i);
+        }
       }
     }
 
@@ -113,14 +125,23 @@ $tornadoShift: 0.5em;
 @keyframes tornado-whirl {
   0% {
     transform: translateX(-$tornadoShift);
-    background-position: 0 50%;
   }
   50% {
     transform: translateX($tornadoShift);
-    background-position: 50% 50%;
   }
   100% {
     transform: translateX(-$tornadoShift);
+  }
+}
+
+@keyframes tornado-whirl-background {
+  0% {
+    background-position: 0 50%;
+  }
+  50% {
+    background-position: 50% 50%;
+  }
+  100% {
     background-position: 100% 50%;
   }
 }
