Scoreboard: replace hardcoded color with theme color

--- a/src/styles/ui/end/Scoreboard.scss
+++ b/src/styles/ui/end/Scoreboard.scss
@@ -47,7 +47,7 @@
   margin-right: 0.5em;
   border-radius: 50%;
   box-shadow: $dropShadow;
-  background-color: #5B6171;
+  background-color: $blueMediumGray;
   font-weight: 500;
   display: flex;
   justify-content: center;
